[package]
name = "nakai_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "nakai_rust"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
paste = "1.0.14"
